--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,11 @@
       <div class="trigger">
         {% for my_page in site.pages %}
           {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+            {% if my_page.title == '赞助' %}
+            <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}"><img src="https://assets.github.com/images/icons/emoji/unicode/2764.png" title="warm heart" alt="warm heart" height="20px" width="20px"> {{ my_page.title }}</a>
+            {% else %}
+            <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+            {% endif %}
           {% endif %}
         {% endfor %}
       </div>
