--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,12 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+// Added by abolybook.
+p.center {
+    text-align: center;
+}
+
+#disqus_thread {
+    margin-top: 4.2em;
+}
